# cpu-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.sh  imgui.ini  run.bat
.cache/clangd/index/: base.h.AD60927C1B466136.idx  format-inl.h.4C2437A97299E53D.idx  format.cc.BA8DFB4FEB5C1A23.idx  format.h.CDF5052A53D83645.idx  main.cpp.E895CC5E0FECB7BB.idx  os.cc.448439AEC79AC136.idx  os.h.B7BBE050440F1877.idx
res/: test.frag  test.vert
src/: main.cpp
src/jkr/: cmd_options.h  cmd_options.hpp  generic.hpp
src/jkr/component/: transform.cpp  transform.hpp
src/jkr/core/: camera.cpp  camera.hpp  input.cpp  input.hpp  window.cpp  window.hpp
src/jkr/editor/: ui.cpp  ui.hpp  view.cpp  view.hpp
src/jkr/editor/view/: inspector.cpp  inspector.hpp
src/jkr/graphics/: primitives.cpp  primitives.hpp  shader.cpp  shader.hpp
src/jkr/utils/: flags.hpp  tracker.hpp
src/test/: test_glfw.cpp  test_imgui.cpp  test_triangle.cpp
